--- a/week08/match.html
+++ b/week08/match.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <div>
-      <div class="a b c" key='0' id="id"></div>
+      <div id="pre" class="pre">
+        <div class="a b c" key="0" id="id"></div>
+      </div>
     </div>
     <script src="./match.js" type="text/javascript"></script>
     <script>
       const ele = document.getElementById("id");
-      match("#id.a.b.c[key=0]", ele);
+      console.log(match("div#pre.pre #id.a.b.c[key=0]", ele));
+      console.log(match(".a.b.c", ele));
+      console.log(match("div div#pre.pre #id.a.b.c[key=0]", ele));
+      console.log(match("p", ele));
+      console.log(match(".f", ele));
     </script>
   </body>
 </html>
