--- a/week08/match.html
+++ b/week08/match.html
@@ -16,6 +16,7 @@
       const ele = document.getElementById("id");
       console.log(match("div#pre.pre #id.a.b.c[key=0]", ele));
       console.log(match(".a.b.c", ele));
+      console.log(match("div", ele));
       console.log(match("div div#pre.pre #id.a.b.c[key=0]", ele));
       console.log(match("p", ele));
       console.log(match(".f", ele));
