--- a/week09/html-tag.html
+++ b/week09/html-tag.html
@@ -193,6 +193,10 @@
             </pre>
           </samp>
         </section>
+        <section>
+          <h1>References</h1>
+          
+        </section>
       </article>
     </main>
     <aside>
